Fixed css comments and fixed linking in nav to work properly. Fixed sequential order of header elements not showing sequential order for h in footer.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,11 +3,11 @@
     padding: 0;
     margin: 0;
 }
-
+/* Body Start */
 body {
     background-color: #d9dcd6;
 }
-
+/* header Start */
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -23,7 +23,7 @@ body {
 .header h1 .seo {
     color: #d9dcd6;
 }
-
+/* Start of Nav */
 .header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -49,7 +49,7 @@ a {
 p {
     font-size: 16px;
 }
-
+/* Image after Nav */
 .hero {
     height: 800px;
     width: 100%;
@@ -58,12 +58,12 @@ p {
     background-size: cover;
     background-position: center;
 }
-
+/* Controls image location */
 .float-left {
     float: left;
     margin-right: 25px;
 }
-
+/* Controls image location */
 .float-right {
     float: right;
     margin-left: 25px;
@@ -74,7 +74,7 @@ p {
     display: inline-block;
     margin-left: 20px;
 }
-
+/* Benefits Section */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -86,51 +86,7 @@ p {
     background-color: #2589bd;
 }
 
-.benefit {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.main-content {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.main-content img {
-    max-height: 200px;
-}
-
-.main-content h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-.footer {
-    padding: 30px;
-    clear: both;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: center;
-}
-
-.footer h2 {
-    font-size: 20px;
-}
-
-/*.benefit-lead {
+.benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
 }
@@ -231,6 +187,16 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
-*/
+/* Footer Start */
+.footer {
+    padding: 30px;
+    clear: both;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: center;
+}
+
+.footer h3 {
+    font-size: 20px;
+}
 
 
